--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 name: kvstore
 services:
   db:
@@ -10,4 +9,5 @@ services:
     ports:
       - "3307:3306"
     volumes:
-      - ./db:/val/lib/mysql
+      - ./db:/var/lib/mysql
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
